@@ -62,6 +62,8 @@ void ags_mixer_input_line_map_recall(AgsLine *line,
 static gpointer ags_mixer_input_line_parent_class = NULL;
 static AgsConnectableInterface *ags_mixer_input_line_parent_connectable_interface;
 
+extern GHashTable *ags_indicator_queue_draw;
+
 GType
 ags_mixer_input_line_get_type()
 {
@@ -142,6 +144,9 @@ ags_mixer_input_line_init(AgsMixerInputLine *mixer_input_line)
 		   0, 0,
 		   1, 1);
   widget = gtk_bin_get_child(GTK_BIN(line_member));
+  AGS_LINE(mixer_input_line)->indicator = widget;
+  g_hash_table_insert(ags_indicator_queue_draw,
+		      widget, ags_line_indicator_queue_draw);
   g_timeout_add(1000 / 30, (GSourceFunc) ags_line_indicator_queue_draw, (gpointer) widget);
 
   adjustment = (GtkAdjustment *) gtk_adjustment_new(0.0, 0.0, 10.0, 1.0, 1.0, 10.0);
