@@ -625,12 +625,20 @@ ags_lv2_manager_load_default_directory()
       
 	GList *ttl_list, *binary_list;
 
+	gchar *manifest_filename;
 	gchar *turtle_path, *filename;
 
 	gboolean turtle_loaded;
-      
-	manifest = ags_turtle_new(g_strdup_printf("%s/manifest.ttl\0",
-						  plugin_path));
+
+	manifest_filename = g_strdup_printf("%s/manifest.ttl\0",
+					    plugin_path);
+
+	if(!g_file_test(manifest_filename,
+			G_FILE_TEST_EXISTS)){
+	  continue;
+	}
+	
+	manifest = ags_turtle_new(manifest_filename);
 	ags_turtle_load(manifest,
 			NULL);
 
